# progress

./: CMakeLists.txt  README.md  progress.sln
Apps/Example/: CMakeLists.txt  main.cpp
Includes/Progress/: Bar.hpp  Publisher.hpp  Subscriber.hpp  Task.hpp
Sources/: Bar.cpp  CMakeLists.txt  Task.cpp
progress/: Bar.cpp  Bar.hpp  Publisher.hpp  Subscriber.hpp  Task.cpp  Task.hpp  main.cpp  progress.vcxproj  progress.vcxproj.filters
progress/x64/Debug/: progress.exe.recipe  progress.ilk  vc143.idb
progress/x64/Debug/progress.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  progress.lastbuildstate
